/*
 * Copyright 2017-present Open Networking Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
option java_package = "org.onosproject.grpc.net.host.models";

package net.host;

import "net/HostLocationProto.proto";

// Corresponds to org.onosproject.net.host.HostDescription.
message HostDescription {
    string hw_address = 1;
    uint32 vlan = 2;
    net.HostLocationProto location = 3;
    repeated string ip_addresses = 4;
    bool configured = 5;
    map<string, string> annotations = 6;
}